# notesapp

backend/: .gitignore  main.py  pyproject.toml
backend/controllers/: notes.py
backend/db/: database.py
backend/models/: note.py
backend/routers/: __init__.py  notes.py
